@@ -26,7 +26,7 @@ const TestModeCheckbox = () => {
 					components: {
 						testCardNumbersLink: (
 							// eslint-disable-next-line jsx-a11y/anchor-has-content
-							<a href="https://stripe.com/docs/testing#cards" />
+							<a href="https://docs.stripe.com/testing#cards" />
 						),
 						learnMoreLink: (
 							// eslint-disable-next-line jsx-a11y/anchor-has-content
